fixed scrollbar

--- a/src/app/mainboard/mainboard.component.css
+++ b/src/app/mainboard/mainboard.component.css
@@ -2,39 +2,39 @@
     height: 100%;
     display: grid;
     grid-template-columns: 0.5fr 1fr 1fr 0.5fr;
-    grid-column-gap: 10px;
+    grid-column-gap: 20px;
     grid-template-rows: 1fr 1fr;
-    grid-row-gap: 10px;
+    grid-row-gap: 20px;
 }
 .scratch-pad {
     grid-column: 1 / 2;
     grid-row: 1 / 3;
     max-height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 .scheduler {
     background-color: #E9E34D;
     grid-column: 2 / 3;
     grid-row: 1 / 2;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 .do {
     background-color: #63BB54;
     grid-column: 3 / 4;
     grid-row: 1 / 2;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 .delete {
     background-color: #F57C7C;
     grid-column: 2 / 3;
     grid-row: 2 / 3;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 .delegate {
     background-color: #3053AE;
     grid-column: 3 / 4;
     grid-row: 2 / 3;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 .pomodoro {
     grid-column: 4 / 5;
